--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,4 +79,144 @@ body,
   body {
     @apply bg-background text-foreground;
   }
+
+  .heart-icon {
+    cursor: pointer;
+    overflow: visible;
+    width: 80px;
+    height: 80px;
+  }
+
+  .heart-icon #heart {
+    transform-origin: center;
+    animation: animateHeartOut 0.3s linear forwards;
+  }
+
+  .heart-icon #main-circ {
+    transform-origin: 29.5px 29.5px;
+  }
+
+  .input-checkbox:checked + label .heart-icon #heart {
+    transform: scale(0.2);
+    fill: red;
+    animation: animateHeart 0.3s linear forwards 0.25s;
+  }
+
+  .input-checkbox:checked + label .heart-icon #main-circ {
+    transition: all 2s;
+    animation: animateCircle 0.3s linear forwards;
+    opacity: 1;
+  }
+
+  /* Animation styles for grp1 */
+  .input-checkbox:checked + label .heart-icon #grp1 {
+    opacity: 1;
+    transition: 0.1s all 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp1 #oval1 {
+    transform: scale(0) translate(0, -30px);
+    transform-origin: 0 0 0;
+    transition: 0.5s transform 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp1 #oval2 {
+    transform: scale(0) translate(10px, -50px);
+    transform-origin: 0 0 0;
+    transition: 1.5s transform 0.3s;
+  }
+
+  /* Animation styles for grp2 */
+  .input-checkbox:checked + label .heart-icon #grp2 {
+    opacity: 1;
+    transition: 0.1s all 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp2 #oval1 {
+    transform: scale(0) translate(30px, -15px);
+    transform-origin: 0 0 0;
+    transition: 0.5s transform 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp2 #oval2 {
+    transform: scale(0) translate(60px, -15px);
+    transform-origin: 0 0 0;
+    transition: 1.5s transform 0.3s;
+  }
+
+  /* Animation styles for grp3 */
+  .input-checkbox:checked + label .heart-icon #grp3 {
+    opacity: 1;
+    transition: 0.1s all 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp3 #oval1 {
+    transform: scale(0) translate(30px, 0px);
+    transform-origin: 0 0 0;
+    transition: 0.5s transform 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp3 #oval2 {
+    transform: scale(0) translate(60px, 10px);
+    transform-origin: 0 0 0;
+    transition: 1.5s transform 0.3s;
+  }
+
+  /* Animation styles for grp4 */
+  .input-checkbox:checked + label .heart-icon #grp4 {
+    opacity: 1;
+    transition: 0.1s all 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp4 #oval1 {
+    transform: scale(0) translate(30px, 15px);
+    transform-origin: 0 0 0;
+    transition: 0.5s transform 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp4 #oval2 {
+    transform: scale(0) translate(40px, 50px);
+    transform-origin: 0 0 0;
+    transition: 1.5s transform 0.3s;
+  }
+
+  /* Animation styles for grp5 */
+  .input-checkbox:checked + label .heart-icon #grp5 {
+    opacity: 1;
+    transition: 0.1s all 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp5 #oval1 {
+    transform: scale(0) translate(-10px, 20px);
+    transform-origin: 0 0 0;
+    transition: 0.5s transform 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp5 #oval2 {
+    transform: scale(0) translate(-60px, 30px);
+    transform-origin: 0 0 0;
+    transition: 1.5s transform 0.3s;
+  }
+
+  /* Animation styles for grp6 */
+  .input-checkbox:checked + label .heart-icon #grp6 {
+    opacity: 1;
+    transition: 0.1s all 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp6 #oval1 {
+    transform: scale(0) translate(-30px, 0px);
+    transform-origin: 0 0 0;
+    transition: 0.5s transform 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp6 #oval2 {
+    transform: scale(0) translate(-60px, -5px);
+    transform-origin: 0 0 0;
+    transition: 1.5s transform 0.3s;
+  }
+
+  /* Animation styles for grp7 */
+  .input-checkbox:checked + label .heart-icon #grp7 {
+    opacity: 1;
+    transition: 0.1s all 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp7 #oval1 {
+    transform: scale(0) translate(-30px, -15px);
+    transform-origin: 0 0 0;
+    transition: 0.5s transform 0.3s;
+  }
+  .input-checkbox:checked + label .heart-icon #grp7 #oval2 {
+    transform: scale(0) translate(-55px, -30px);
+    transform-origin: 0 0 0;
+    transition: 1.5s transform 0.3s;
+  }
 }
