--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -220,3 +220,33 @@ body,
     transition: 1.5s transform 0.3s;
   }
 }
+
+@keyframes addToCart {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(0.95);
+  }
+
+  80% {
+    transform: scale(1.05);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0);
+    opacity: 0.5;
+  }
+
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
